# monado_demo_xrgears

./: .clang-format  .gitignore  CMakeLists.txt  build.gradle  gradle.properties  meson.build
app/: build.gradle
app/src/main/: AndroidManifest.xml
app/src/main/java/com/collabora/xrgears/: PresentationWithMediaRouterActivity.java  UsbDPActivity.java  XrGears.java
app/src/main/res/layout/: presentation_with_media_router_activity.xml
app/src/main/res/values/: strings.xml
gradle/wrapper/: gradle-wrapper.properties
shaders/: CMakeLists.txt  gears.frag  gears.vert  meson.build  sky_plane_equirect.frag  sky_plane_equirect.vert
src/: CMakeLists.txt  gear.hpp  glm_inc.hpp  ktx_stream.c  ktx_stream.h  ktx_texture.c  ktx_texture.h  log.c  log.h  main.cpp  meson.build  pipeline_equirect.cpp  pipeline_equirect.hpp  pipeline_gears.cpp  pipeline_gears.hpp  settings.c  settings.h  settings.hpp  textures.c  textures.h  vulkan_buffer.c  vulkan_buffer.h  vulkan_buffer.hpp  vulkan_context.c  vulkan_context.h  vulkan_device.c  vulkan_device.h  vulkan_device.hpp  vulkan_framebuffer.c  vulkan_framebuffer.h  vulkan_framebuffer.hpp  vulkan_instance.hpp  vulkan_pipeline.hpp  vulkan_shader.c  vulkan_shader.h  vulkan_shader.hpp  vulkan_texture.c  vulkan_texture.cpp  vulkan_texture.h  vulkan_texture.hpp  (+6 more)
textures/: meson.build  textures.gresource.xml
